# seCall

./: CHANGELOG.md  Cargo.toml  README.md
crates/secall/: Cargo.toml
crates/secall-core/: Cargo.toml
crates/secall-core/src/: lib.rs
crates/secall-core/src/graph/: extract.rs  mod.rs  semantic.rs
crates/secall-core/src/hooks/: mod.rs
crates/secall-core/src/ingest/: chatgpt.rs  claude.rs  detect.rs  gemini.rs  markdown.rs  mod.rs  types.rs
crates/secall-core/src/mcp/: rest.rs  server.rs
crates/secall-core/src/search/: embedding.rs  hybrid.rs  model_manager.rs  query_expand.rs  tokenizer.rs  vector.rs
crates/secall-core/src/store/: db.rs  graph_repo.rs
crates/secall-core/src/vault/: config.rs  git.rs
crates/secall/src/: main.rs
crates/secall/src/commands/: config.rs  embed.rs  ingest.rs  init.rs  lint.rs  model.rs  status.rs  sync.rs  wiki.rs
crates/secall/tests/: cli_smoke.rs
docs/plans/: gemini-result.md  gemini-review-r1.md  gemini-review-r2.md  gemini-review-r3.md  gemini-task-01.md  gemini.md  p25-phase-2-graph-task-01.md  p25-phase-2-graph-task-02.md  p25-phase-2-graph-task-03.md  p25-phase-2-graph-task-04.md  p25-phase-2-graph.md  secall-p15-windows-result.md  secall-p15-windows-review-r1.md  secall-p15-windows-task-01.md  secall-p15-windows-task-02.md  secall-p15-windows.md  secall-p5-vault-sync-task-03.md  secall-p9-chatgpt-result.md  secall-p9-chatgpt-review-r1.md  secall-p9-chatgpt-review-r2.md  secall-p9-chatgpt.md  secall-refactor-p2-result.md  secall-refactor-p2-review-r1.md
docs/reference/: github-vault-sync.md
obsidian-secall/: styles.css
obsidian-secall/src/: api.ts  daily-view.ts  graph-view.ts  main.ts  search-view.ts  settings.ts
