[workspace]
members = ["crates/secall-core", "crates/secall"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[workspace.package]
version = "0.3.3"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"
repository = "https://github.com/hang-in/seCall"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
walkdir = "2"
toml = "0.8"
lindera = { version = "2.3.4", features = ["embed-ko-dic"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rmcp = { version = "1.3.0", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.8", features = ["http1", "tokio"] }
tokio-util = { version = "0.7" }
schemars = "1.0"
async-trait = "0.1"
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
kiwi-rs = "0.1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
usearch = "2"
gethostname = "0.4"
serde_yaml = "0.9"
zip = { version = "=2.3.0", default-features = false, features = ["deflate"] }
regex = "1"
openvino = { version = "0.9", features = ["runtime-linking"] }
libloading = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
