[package]
name = "secall-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
dirs.workspace = true
walkdir.workspace = true
toml.workspace = true
lindera.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
async-trait.workspace = true
ort.workspace = true
ndarray.workspace = true
tokenizers.workspace = true
kiwi-rs.workspace = true
sha2.workspace = true
futures-util.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
