[package]
name = "secall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
secall-core = { path = "../secall-core" }
clap = { version = "=4.5.58", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dirs.workspace = true
walkdir.workspace = true
shellexpand = "3"
dialoguer = "0.11"
tracing.workspace = true
tracing-subscriber.workspace = true
gethostname.workspace = true
futures = "0.3"
